Name:                ak
Version:             0.1
Synopsis:            Command-line task management package
Description:         A command-line program for managing a simple task list
License:             BSD3
License-file:        LICENSE
Author:              Jonathan Daugherty
Maintainer:          drcygnus@gmail.com
Category:            Development
Build-type:          Simple
Cabal-version:       >=1.2

Executable ak
  Hs-Source-Dirs:    src

  Build-Depends:
    base >= 3 && < 5

  Main-is:           Main.hs

  if impl(ghc >= 6.12.0)
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
